@@ -1,3 +1,13 @@
+2007-04-10  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libsteticui/CecilWidgetLibrary.cs: Performance improvements in the
+	  method that resolves widget types.
+	* libstetic/wrapper/ButtonBox.cs: Don't automatically bind dialog
+	  buttons with response type set to None.
+	* libstetic/PropertyDescriptor.cs: Set the hasDefault flag when a
+	  default is explicitely set in the objects.xml file.
+	* libstetic/Makefile.am: Updated.
+
 2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libsteticui/ApplicationBackend.cs: Don't allow cutting/copying top
